# nas_gallery

./: .dockerignore  Dockerfile  README.md  index.md
.github/workflows/: docker-image.yml  rust.yml
docker-compose/complete/: docker-compose.yml
docker-compose/simple/: docker-compose.yml
docs/: diag.vsdx  simple_deploy.md  ~$$diag.~vsdx
rust/: Cargo.toml  Rocket.toml  example_config.toml
rust/src/: \  audit.rs  file_type.rs  file_with_size.rs  folder.rs  forwarded_identity.rs  logging.rs  main.rs  options.rs  statistics.rs
typescript/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
typescript/e2e/src/: app.e2e-spec.ts
typescript/src/: index.html
typescript/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  simplegal.service.spec.ts  simplegal.service.ts
typescript/src/app/entities/: items.ts  pagelink.ts  remoteFolder.ts
typescript/src/app/preview/: preview.component.css  preview.component.html  preview.component.ts
