[package]
name = "nas_gallery"
version = "0.1.0"
authors = ["Francesco Cogno <francesco.cogno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"
log = "*"
fern = "*"
chrono = "*"
hyper = "*"
snafu = "*"
