[package]
name = "nas_gallery"
version = "1.0.0"
authors = ["Francesco Cogno <francesco.cogno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
log = "0.4"
fern = "0.6"
chrono = "0.4"
hyper = "0.13"
snafu = "0.6"
